[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-optimization-env"
version = "1.0.0"
description = "Content optimization environment for OpenEnv and the Meta Hackathon submission flow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.100.0",
    "gradio>=4.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["env", "models", "server"]
